fix spacing between category menu items

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -216,7 +216,7 @@
 
     @include breakpoint("medium") {
         display: inline-block;
-        padding: 0 spacing("half");
+        padding: 0 (spacing("single") + spacing("quarter")) 0 (spacing("half") + spacing("quarter"));
 
         &.is-open {
             background-color: stencilColor("navPages-subMenu-backgroundColor");
